--- a/pychronia_common/static/MetalRadiance/scss/_reset.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_reset.scss
@@ -32,7 +32,7 @@ table, tbody, tfoot, thead, tr, th, td {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
+  vertical-align: middle;
 }
 
 /* HTML5 display-role reset for older browsers */
